--- a/_includes/other-links.html
+++ b/_includes/other-links.html
@@ -11,7 +11,7 @@
         <a href="https://github.com/VijayKrishna"><b>github</b>.com</a>
 
         {% if include.on_home_page != true %}
-        &bull; <a href="{{ site.url }}/archives.html"><b>arch</b>ives</a>
+        &bull; <a href="{{ site.url }}/archives"><b>arch</b>ives</a>
         {% endif %}
 
         <!-- <a href="http://instagram.com/vpalepu" target="_blank">Instagram</a> &bull; -->
