--- a/3dg/style.css
+++ b/3dg/style.css
@@ -24,3 +24,42 @@ body {
     font-size: 12px;
     color: slategrey;
 }
+
+.btn {
+    cursor: pointer;
+    font-size: 20px; 
+    border: 2px; 
+    margin: 0px;
+    border-radius: 45%; 
+    -moz-border-radius: 45%;
+    -webkit-border-radius: 45%;
+}
+
+.unicorn {
+    background-color: #dccaf0;
+}
+.unicorn::after {
+    content:"\01F984";
+}
+
+.paint {
+    background: #fdcfa4;
+}
+.paint::after {
+    content:"\01F3A8";
+}
+
+.small-btn {
+    width: 50px !important;
+    height: 25px !important;
+}
+
+.medium-btn {
+    width: 70px !important;
+    height: 30px !important;
+}
+
+.big-btn {
+    width: 90px !important;
+    height: 40px !important;
+}
