--- a/css/screen.css
+++ b/css/screen.css
@@ -213,7 +213,7 @@ div.fixed {
 
 div.fixed_bottom {
   position: fixed;
-  top: 90%;
+  bottom: 5px;
 }
 
 div.center:hover {
@@ -232,20 +232,21 @@ li:hover strong {
 
 div.plain {
   float:left;
-  /*width:auto; */
   margin-right:10px; margin-bottom:10px;
   margin-left:0px;
   background-color:rgba(255, 255, 255, 0.95);
   color:#111;
-  border-top:1px solid silver;
-  border-bottom:1px solid silver;
-  border-radius:4px; -moz-border-radius:4px; 
+  /* border-top:0.1px solid silver; */
+  /* border-bottom:1px solid silver; */
+  /* border-radius:10px; -moz-border-radius:10px;  */
   padding-left:10px; padding-right:10px; padding-bottom:1px; padding-top:1px;
   overflow:hidden;
+  font-size: 0.8em;
 }
 
 div.stretch {
   margin-left:0px;
+  width:100%;
 }
 
 
@@ -259,15 +260,28 @@ img.icon_1_5x {
   height: 35px;
 }
 
-img.icon_2x {
-  width: 50px;
-  height: 50px;
+img.round_icon_3x {
+  border: 0.5px solid silver;
+  width: 75px;
+  height: 75px;
+  border-radius: 75px;
+  padding: 2px;
 }
 
-img.bounded {
+img.round_icon_2x {
   border: 0.5px solid silver;
+  width: 50px;
+  height: 50px;
   border-radius: 50px;
-  padding: 2px
+  padding: 2px;
+}
+
+img.round_icon {
+  border: 0.5px solid silver;
+  width: 25px;
+  height: 25px;
+  border-radius: 25px;
+  padding: 2px;
 }
 
 .header {
@@ -305,6 +319,10 @@ img.bounded {
   padding-left:10px; padding-right:10px; padding-bottom:1px; padding-top:1px;
 }
 
+.reallytiny {
+  font-size: 0.55em;
+}
+
 .tiny {
   font-size: 0.75em;
 }
@@ -335,11 +353,12 @@ img.bounded {
 
 .regular_x3 {
   font-size: 3em;
+  line-height:1.25em;
 }
 
 .regular_x3_5 {
   font-size: 3.5em;
-  line-height:1.1em;
+  line-height:1.5em;
 }
 
 .gynormous2x {
@@ -399,6 +418,11 @@ hr.thinblue {
 
 .icon-home:before {
   content: "\e600";
+  border: 0.5px solid silver;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  padding: 2px;
 }
 
 .icon-download:before {
