--- a/_includes/circles.html
+++ b/_includes/circles.html
@@ -3,6 +3,7 @@
     <a href="{{ site.url }}/cv.html" title="Resume and C.V."><img class="round_icon_3x" src="{{ site.url }}/images/cv.svg"></a>
     
     <a href="{{ site.url }}/cerebro.html" title="Cerebro"><img class="round_icon_3x" src="{{ site.url }}/images/brain-in-cream.png"></a>
+    <a href="{{ site.url }}/hulkbotjr.html" title="HulkBot Jr."><img class="round_icon_3x" src="{{ site.url }}/images/hulkbot-icon.png"></a>
     
     
     <a href="{{ site.url }}/research.html" title="Software Research"><img class="round_icon_3x" src="{{ site.url }}/images/code.svg"></a>
