Covid19 Testing Tracker

--- a/_includes/circles.html
+++ b/_includes/circles.html
@@ -1,6 +1,6 @@
 <div style="margin:auto; text-align: left;">
-    <a href="{{ site.url }}/index.html" title="Home"><img class="round_icon_3x" src="{{ site.url }}/images/tunnel.jpg"></a>
-    <a href="{{ site.url }}/cv.html" title="Resume and C.V."><img class="round_icon_3x" src="{{ site.url }}/images/cv.svg"></a>
+    <a href="{{ site.url }}/index.html" title="Home"><img class="round_icon_3x" src="{{ site.url }}/images/vipalepu.jpg"></a>
+    <!-- <a href="{{ site.url }}/cv.html" title="Resume and C.V."><img class="round_icon_3x" src="{{ site.url }}/images/cv.svg"></a> -->
     
     <a href="{{ site.url }}/cerebro.html" title="Cerebro"><img class="round_icon_3x" src="{{ site.url }}/images/brain-in-cream.png"></a>
     <a href="{{ site.url }}/hulkbotjr.html" title="HulkBot Jr."><img class="round_icon_3x" src="{{ site.url }}/images/hulkbot-icon.png"></a>
@@ -9,6 +9,8 @@
     <a href="{{ site.url }}/research.html" title="Software Research"><img class="round_icon_3x" src="{{ site.url }}/images/code.svg"></a>
     
     <a href="{{ site.url }}/archives" title="Ph.D. Archives"><img class="round_icon_3x" src="{{ site.url }}/images/1990.jpg"></a>
+
+    <a href="{{ site.url }}/100" title="Project 100"><img class="round_icon_3x" src="{{ site.url }}/images/100.png"></a>
     <!-- <a href="{{ site.url }}/notices.html" title="Notices"><img class="round_icon_3x" src="{{ site.url }}/images/notice.svg"></a> -->
 
     <!-- <span class="regular_x3"><a href="{{ site.url }}/index.html" class="regular_x3 icon-home"></a></span> -->
