--- a/_includes/header-content.html
+++ b/_includes/header-content.html
@@ -1,4 +1,4 @@
-<div style="height:40%"></div>
+<div style="height:30%"></div>
 
 {% include circles.html %}
 
@@ -43,7 +43,7 @@
           {% elsif page.categories contains 'publication' %}
             <a href="{{ site.url }}/research.html">Research</a> /
           {% endif %}
-          {{ page.title }}
+          <span class="huge">{{ page.title }}</span>
         </span>
       {% endif %}
     </div>
