--- a/_includes/circles.html
+++ b/_includes/circles.html
@@ -10,7 +10,7 @@
     
     <a href="{{ site.url }}/archives" title="Ph.D. Archives"><img class="round_icon_3x" src="{{ site.url }}/images/1990.jpg"></a>
 
-    <a href="{{ site.url }}/100" title="Project 100"><img class="round_icon_3x" src="{{ site.url }}/images/100.png"></a>
+    <!-- <a href="{{ site.url }}/100" title="Project 100"><img class="round_icon_3x" src="{{ site.url }}/images/100.png"></a> -->
     <!-- <a href="{{ site.url }}/notices.html" title="Notices"><img class="round_icon_3x" src="{{ site.url }}/images/notice.svg"></a> -->
 
     <!-- <span class="regular_x3"><a href="{{ site.url }}/index.html" class="regular_x3 icon-home"></a></span> -->
