--- a/_includes/circles.html
+++ b/_includes/circles.html
@@ -1,16 +1,24 @@
 <div style="margin:auto; text-align: left;">
-    <a href="{{ site.url }}/index.html" title="Home"><img class="round_icon_3x" src="{{ site.url }}/images/vipalepu.jpg"></a>
+    <a href="{{ site.url }}/index.html" title="Home"><img class="round_icon_3x" src="{{ site.url }}/images/vipalepu-memoji.jpg"></a>
     <!-- <a href="{{ site.url }}/cv.html" title="Resume and C.V."><img class="round_icon_3x" src="{{ site.url }}/images/cv.svg"></a> -->
     
+    <a href="{{ site.url }}/research.html" title="Software Research"><img class="round_icon_3x" src="{{ site.url }}/images/code.svg"></a>
     <a href="{{ site.url }}/cerebro.html" title="Cerebro"><img class="round_icon_3x" src="{{ site.url }}/images/brain-in-cream.png"></a>
     <a href="{{ site.url }}/hulkbotjr.html" title="HulkBot Jr."><img class="round_icon_3x" src="{{ site.url }}/images/hulkbot-icon.png"></a>
     
-    
-    <a href="{{ site.url }}/research.html" title="Software Research"><img class="round_icon_3x" src="{{ site.url }}/images/code.svg"></a>
-    
     <a href="{{ site.url }}/archives" title="Ph.D. Archives"><img class="round_icon_3x" src="{{ site.url }}/images/1990.jpg"></a>
 
-    <a href="{{ site.url }}/covid19-india-testing" title="Covid19 India Testing"><img class="round_icon_3x" src="{{ site.url }}/images/covid19-india-testing.png"></a>
+    <a href="https://www.getrevue.co/profile/vkrishnapalepu" title="Newsletter">
+        <img class="round_icon_3x" src="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22 style=%22background-color:white%22><text y=%22.9em%22 font-size=%2290%22>🗞</text></svg>">
+    </a>
+    <a href="https://medium.com/cfh-during-wfh" title="Cooking">
+        <img class="round_icon_3x" src="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22 style=%22background-color:white%22><text y=%22.9em%22 font-size=%2290%22>🍳</text></svg>">
+    </a>
+    <a href="https://softwarenotes.substack.com" title="Notes">
+        <img class="round_icon_3x" src="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22 style=%22background-color:white%22><text y=%22.9em%22 font-size=%2290%22>📚</text></svg>">
+    </a>
+
+    <!-- <a href="{{ site.url }}/covid19-india-testing" title="Covid19 India Testing"><img class="round_icon_3x" src="{{ site.url }}/images/covid19-india-testing.png"></a> -->
     
     <!-- <a href="{{ site.url }}/100" title="Project 100"><img class="round_icon_3x" src="{{ site.url }}/images/100.png"></a> -->
     <!-- <a href="{{ site.url }}/notices.html" title="Notices"><img class="round_icon_3x" src="{{ site.url }}/images/notice.svg"></a> -->
