Substack and m.com updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
   <!-- <link rel="stylesheet" href="{{ site.url }}/css/pygments.css" type="text/css" > -->
 </head>
 <body>
+  <iframe src="https://softwarenotes.substack.com/embed" width="680" height="165" style="border:1px solid #EEE; background:white;margin-bottom: -40px; padding: 0px;" frameborder="0" scrolling="no"></iframe>
   <div class="container">
 
     {% include header-content.html post=page %}
