--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,5 +30,6 @@
   </div>
   </div> <!-- end of main -->
   <!-- <div class="header"></div> -->
+  <a rel="me" href="https://mastodon.online/@krishnavp">🐘</a>
 </body>
 </html>
